--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link rel="stylesheet" href="styles.css">
+        <link rel="websites icon" type="jpg" href="ds.jpg">
 </head>
 <body>
     <h1>SNAKE GAME<br><h3>DEVELOPED BY ANSH VERMA</h3></h1><br>
